--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        julia-version: ['1.9']
+        julia-version: ['1.10']
         julia-arch: [x64]
         os: [ubuntu-latest]
 
@@ -17,5 +17,4 @@ jobs:
           arch: ${{ matrix.julia-arch }}
       - uses: julia-actions/cache@v1
       - uses: julia-actions/julia-buildpkg@latest
-      - run: julia --color=yes -e 'cd("PorousConvection");
-                                   import Pkg; Pkg.activate("."); Pkg.test()'
+      - run: julia --color=yes -e 'import Pkg; Pkg.activate("."); Pkg.test()'
