--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,11 @@ authors = ["saluzf saluzf@ethz.ch"]
 version = "0.1.0"
 
 [deps]
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+ImplicitGlobalGrid = "4d7a3746-15be-11ea-1130-334b0c4f5fa0"
+MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
+ParallelStencil = "94395366-693c-11ea-3b26-d9b7aac5d958"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
